MB-35702: Propagate SSL write errors from sendmsg

If a write error occurs on a SSL connection for one
of the entries in the IO vector after a successful
write the error status set from the underlying write
was lost.

Change-Id: I61c7da4f84117f12745fc8b8aa5984352187daef
Reviewed-on: http://review.couchbase.org/113888
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>